--- a/app/Rmd/intro_EN.Rmd
+++ b/app/Rmd/intro_EN.Rmd
@@ -9,6 +9,8 @@ output:
     theme: paper
     toc: true
     toc_depth: 5
+    toc_float:
+      collapsed: false
 bibliography: '`r here::here("app/data/mybiblio.bib")`'
 ---
 
@@ -139,16 +141,14 @@ The following are definitions relevant for species listed by the _Species at Ris
 ## **SAR DATABASE SUMMARY**
 
 TO BE CHECKED BEFORE MERGING! 
-This section summarizes the SAR coverage of the data sources used in the report. A summary of the data sources containing records of each species with a status under COSEWIC or SARA in the study area is provided.  The caveats and conditions for each individual data source are detailed above in their dedicated sections of the report. An absence of records is not necessarily an absence of the species in the area.  Data sources included below are limited to species point data. A description of the different sources of information for Species at Risk is also available in the infographic: <https://github.com/dfo-mar-odis/shinySpatialApp/blob/master/app/data/misc/SAR-information-type-reproducible-reports.pdf>)
+This section summarizes the SAR coverage of the data sources used in the report. A summary of the data sources containing records of each species with a status under COSEWIC or SARA in the study area is provided.  The caveats and conditions for each individual data source are detailed above in their dedicated sections of the report. An absence of records is not necessarily an absence of the species in the area. A description of the different sources of information for Species at Risk is also available in the infographic: <https://github.com/dfo-mar-odis/shinySpatialApp/blob/master/app/data/misc/SAR-information-type-reproducible-reports.pdf>). 
 
 ```{r sar-obs-summary-table}
 absentCode <- "&nbsp;-&nbsp;"
 presentCode <- "&#x2714;"
 summarySarTable[is.na(summarySarTable)] <- absentCode
-formatedTable <- mutate_all(summarySarTable, ~ cell_spec(., color = ifelse(. == presentCode, "white", ""), background = ifelse(. == presentCode, "green", ""), escape = FALSE))
+formatedSarTable <- mutate_all(summarySarTable, ~ cell_spec(., color = ifelse(. == presentCode, "white", ""), background = ifelse(. == presentCode, "green", ""), escape = FALSE))
 
-knitr::kable(formatedTable, align="l", caption = "INITIAL TEXT FINALIZE BEFORE USING OFFICIALLY. Summary of SAR records present in data sources used in this report. ", booktabs = T, escape = F, linesep = "") %>%
-  kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
 ```
 
 ```{r sar-hab-summary-table}
@@ -161,10 +161,20 @@ knitr::kable(formatedTable, align="l", caption = "INITIAL TEXT FINALIZE BEFORE U
   summaryHabTable <- mutate_all(summaryHabTable, ~ cell_spec(., color = ifelse(. == presentCode, "white", ""),
                   background = ifelse(. == presentCode, "green", ""), escape = FALSE))
 
-  names(summaryHabTable) <- c("Species", "COSEWIC", "SARA", "Observations", "[SAR Distribution](#sardist-section)", "SDM", "Important Habitat", "Critical Habitat")
+  names(summaryHabTable) <- c("Species", "COSEWIC", "SARA", "Observations", "SAR Range", "SDM", "Important Habitat", "Critical Habitat")
 
-knitr::kable(summaryHabTable, align="l", caption = "INITIAL TEXT FINALIZE BEFORE USING OFFICIALLY. Summary of Observation, Range, Modeling and Habitat results present in data sources used in this report. ", booktabs = T, escape = F, linesep = "") %>%
+  
+```
+
+```{r output-hab-table}
+knitr::kable(summaryHabTable, align="l", caption = "INITIAL TEXT FINALIZE BEFORE USING OFFICIALLY. Summary of Observation, Range, Modeling and Habitat results in the study area for each SAR. A summary of the observation data sources is presented in the subsequent table.  ", booktabs = T, escape = F, linesep = "") %>%
   kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
+```
+
+```{r output-sar-table}
+knitr::kable(formatedSarTable, align="l", caption = "INITIAL TEXT FINALIZE BEFORE USING OFFICIALLY. Summary of data sources containing records for each SAR in the study area used in this report. ", booktabs = T, escape = F, linesep = "") %>%
+  kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
+
 ```
 
 
