--- a/app/Rmd/report_fish_FR.Rmd
+++ b/app/Rmd/report_fish_FR.Rmd
@@ -35,11 +35,11 @@ knitr::kable(table_RV, align="l",
 
 Samples_bbox <- outputList$mapPoints
 
-if (!is.null(outputList$studyData)) {
-  tableList <- create_table_RV(outputList$studyData, listed_species, speciesTable = RVGSSPECIES)
-  rvAllTable <- tableList$allSpecies
-  rvSarTable <- tableList$sarData
-}
+tableList <- create_table_RV(outputList$studyData, listed_species, speciesTable = RVGSSPECIES)
+rvAllTable <- tableList$allSpecies
+rvSarTable <- tableList$sarData
+summarySarTable <- add_col_to_sar_summary(summarySarTable, "[RV](#RV-section)", rvSarTable, "Common Name", "Individuals")
+
 ```
 *
 ```{r RV-check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
@@ -103,18 +103,16 @@ outputListM <- master_intersect(marfis_sf, mapDataList, Year = minYear)
 Samples_bboxI <- outputListI$mapPoints
 Samples_bboxM <- outputListM$mapPoints
 
-if (!is.null(outputListI$studyData)) {
-  tableList <- create_table_ISDB(outputListI$studyData, listed_species,
-                                 speciesTable = ISSPECIESCODES)
-  table_isdb1 <- tableList[[1]]
-  table_isdb2 <- tableList[[2]]
-}
+tableList <- create_table_ISDB(outputListI$studyData, listed_species,
+                               speciesTable = ISSPECIESCODES)
+isdbAllTable <- tableList$allSpeciesData
+isdbSarTable <- tableList$sarData
+summarySarTable <- add_col_to_sar_summary(summarySarTable, "[ISDB](#ISDB-section)", isdbSarTable, "Common Name", "Records")
 
-if (!is.null(outputListM$studyData)) {
-  tableList <- create_table_MARFIS(outputListM$studyData, listed_species, speciesTable = MARFISSPECIESCODES)
-  table_mar1 <- tableList[[1]]
-  table_mar2 <- tableList[[2]]
-}
+tableList <- create_table_MARFIS(outputListM$studyData, listed_species, speciesTable = MARFISSPECIESCODES)
+marfisAllTable <- tableList$allSpeciesData
+marfisSarTable <- tableList$sarData
+summarySarTable <- add_col_to_sar_summary(summarySarTable, "[MARFIS](#MARFIS-section)", marfisSarTable, "Common Name", "Records")
 ```
 *
 ```{r isdb-check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
@@ -140,7 +138,6 @@ writeLines(Report_marfis)
 
 ```{r marfis-isdb-plot, fig.height=8, fig.width=11, fig.cap='Niveau de qualité : Moyenne. Niveau de sécurité : Protégé B. Carte montrant la zone de recherche définie par l’utilisateur (entourée de rouge) utilisée pour demander des renseignements agrégés provenant des dossiers d’observation du Système d’information sur les pêches des Maritimes (SIPMAR) et/ou de la Base de données des relevés de l’industrie (BDRI), qui sont présentés sous forme de points noirs, pour toutes les espèces. La règle des cinq n’a pas été appliquée.'}
 if (!is.null(outputListI$studyData) & !is.null(outputListM$studyData)) {
-  
   areaMap + geom_point(data = Samples_bboxI, aes(x = long, y = lat), size = 2, shape = 16, col = "black") + geom_point(data = Samples_bboxM, aes(x = long, y = lat), size = 2, shape = 16, col = "black")
 } else if (!is.null(outputListI$studyData)) {
     areaMap + geom_point(data = Samples_bboxI, aes(x = long, y = lat), size = 2, shape = 16, col = "black")
@@ -150,22 +147,22 @@ if (!is.null(outputListI$studyData) & !is.null(outputListM$studyData)) {
 ```
 ```{r isdb-SAR-table}
 if (!is.null(outputListI$studyData)) {
-knitr::kable(table_isdb2, align="l", caption="Niveau de qualité : Moyenne. Niveau de sécurité : Protégé B. Registres d’observation de la base de données des relevés de l’industrie des espèces contenues dans la zone de recherche et inscrites en vertu de la <i>Loi sur les espèces en péril</i> (LEP) ou évaluées par le Comité sur la situation des espèces en péril au Canada (COSEPAC). <b>TSi une espèce est absente du présent tableau, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b>", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+knitr::kable(isdbSarTable, align="l", caption="Niveau de qualité : Moyenne. Niveau de sécurité : Protégé B. Registres d’observation de la base de données des relevés de l’industrie des espèces contenues dans la zone de recherche et inscrites en vertu de la <i>Loi sur les espèces en péril</i> (LEP) ou évaluées par le Comité sur la situation des espèces en péril au Canada (COSEPAC). <b>TSi une espèce est absente du présent tableau, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b>", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 <br><br>
 ```{r isdb-all-table}
 if (!is.null(outputListI$studyData)) {
-  knitr::kable(table_isdb1, align="l", caption="Niveau de qualité : Moyenne. Niveau de sécurité : Protégé B. Registres d’observation de la base de données des relevés de l’industrie de <u>toutes les espèces</u> contenues dans la zone de recherche, résumées par espèce ou groupe d’espèces. <b>Si une espèce est absente du présent tableau, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b>", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+  knitr::kable(isdbAllTable, align="l", caption="Niveau de qualité : Moyenne. Niveau de sécurité : Protégé B. Registres d’observation de la base de données des relevés de l’industrie de <u>toutes les espèces</u> contenues dans la zone de recherche, résumées par espèce ou groupe d’espèces. <b>Si une espèce est absente du présent tableau, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b>", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 
 ```{r marfis-SAR-table}
 if (!is.null(outputListM$studyData)) {
-  knitr::kable(table_mar2, align="l", caption="Niveau de qualité : Moyenne. Niveau de sécurité : Protégé B. Registres d’observation du Système d’information sur les pêches des Maritimes des espèces contenues dans la zone de recherche et inscrites en vertu de la <i>Loi sur les espèces en péril</i> (LEP) ou évaluées par le Comité sur la situation des espèces en péril au Canada (COSEPAC). <b>Si une espèce est absente du présent tableau, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b>", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+  knitr::kable(marfisSarTable, align="l", caption="Niveau de qualité : Moyenne. Niveau de sécurité : Protégé B. Registres d’observation du Système d’information sur les pêches des Maritimes des espèces contenues dans la zone de recherche et inscrites en vertu de la <i>Loi sur les espèces en péril</i> (LEP) ou évaluées par le Comité sur la situation des espèces en péril au Canada (COSEPAC). <b>Si une espèce est absente du présent tableau, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b>", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 <br><br>
 ```{r marfis-all-table}
 if (!is.null(outputListM$studyData)) {
-  knitr::kable(table_mar1, caption="Niveau de qualité : Moyenne. Niveau de sécurité : Protégé B. Registres d’observation du Système d’information sur les pêches des Maritimes de <u>toutes les espèces</u> contenues dans la zone de recherche, résumées par espèce ou groupe d’espèces. <b>Si une espèce est absente du présent tableau, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b>", booktabs = T, escape = F, linesep="")  %>% column_spec(1, width="15cm")
+  knitr::kable(marfisAllTable, caption="Niveau de qualité : Moyenne. Niveau de sécurité : Protégé B. Registres d’observation du Système d’information sur les pêches des Maritimes de <u>toutes les espèces</u> contenues dans la zone de recherche, résumées par espèce ou groupe d’espèces. <b>Si une espèce est absente du présent tableau, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b>", booktabs = T, escape = F, linesep="")  %>% column_spec(1, width="15cm")
 } %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 ### **Système d’information sur la biodiversité des océans (SIBO)**  
@@ -183,9 +180,8 @@ Le SIBO est un centre mondial de données et d’information en libre accès sur
 ```{r obis-results, include=FALSE, cache=FALSE}
 outputList <- master_intersect(obis_fish_sf, mapDataList, Year = minYear)
 
-if (!is.null(outputList$studyData)) {
-  obisTable <- create_table_OBIS(outputList$studyData)
-}
+obisTable <- create_table_OBIS(outputList$studyData)
+summarySarTable <- add_col_to_sar_summary(summarySarTable, "[OBIS](#OBIS-section)", obisTable, "Common Name", "Common Name")
 ```
 *
 ```{r obis-check, echo=FALSE, results='asis',}
@@ -206,5 +202,48 @@ if (!is.null(outputList$studyData)) {
 ```{r obis-table, echo=FALSE, results='asis', caption="Les espèces prioritaires avec des observations contenues dans la base de données du SIBO, dans la zone de recherche."}
 if (!is.null(outputList$studyData)) {
   knitr::kable(obisTable, align="l", caption="Niveau de qualité : Moyenne. Niveau de sécurité : Aucun. Registres d’observation du système d’information sur la biodiversité des océans (SIBO) des espèces contenues dans la zone de recherche et inscrites en vertu de la <i>Loi sur les espèces en péril</i> (LEP) ou évaluées par le Comité sur la situation des espèces en péril au Canada (COSEPAC). <b>Si une espèce est absente du présent tableau, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+}
+```
+
+### **OCEARCH Shark Tracker** {#OCEARCH-section}
+Contact: Bryan Franks (bfranks@ju.edu) via Sean Butler (sean.butler@dfo-mpo.gc.ca)\
+URL: <https://www.ocearch.org/tracker/>\
+Last retrieved on: July 22 2021 by Sean Butler\
+Quality Tier: High\
+Search year: 2013-2020\
+Security level: none\
+Data use constraints: DFO INTERNAL USE ONLY
+
+OCEARCH is a data-centric organization built to help scientists collect previously unattainable data in the ocean while open sourcing our research and explorations. Open sourcing and inclusion at every level, and in real-time, allows the world to participate in their projects while being aware of the developing science. OCEARCH shares the data, including samples collected and tracking data, with collaborating institutions and students who request them for their studies. The tracking data is also open-sourced to the public via the OCEARCH Tracker. The OCEARCH Tracker is a free app that lets you observe the navigational pattern of animals that have been tagged with satellite tracking technology. White Shark locations from satellite trackers are summarized in this section from 1 Jan 2013 to 31 Oct 2020. Locations were clipped to only include locations within the Canadian EEZ. A speed filter was run with 3 m/s as the maximum speed and 2.5 km as the potential error of locations. This filter removed approximately 100 locations out of of 2,000. Resulting points ere then visualized in ArcGIS to identify potential errors and remove locations that seemed implausible. Each shark location was individually plotted to do a second visual examination and to remove or flag errors/outliers. There is additional QA/QC that could still be performed to this dataset to capture additional issues (e.g. there may be single shark locations in Canadian waters during a period of time that the speed filter would not remove or that were not captured in the visual inspection). The absence of White Sharks in this section map should be interpreted as an absence of tracking data, not necessarily as an absence of the species in the area.
+
+#### ***Area-specific OCEARCH Shark Tracker search results***
+```{r ocearch-results, include=FALSE, cache=FALSE}
+ocearchOutputList <- master_intersect(ocearch_sf, mapDataList)
+
+if (!is.null(ocearchOutputList$studyData)) {
+   ocearchSummaryRow <- data.frame("CommonName" = c("White Shark"))
+} else {
+  ocearchSummaryRow <- NULL
+}
+summarySarTable <- add_col_to_sar_summary(summarySarTable, "[OCEARCH](#OCEARCH-section)",
+                                          ocearchSummaryRow, "CommonName", "CommonName")
+
+```
+
+*
+```{r ocearch-check, echo=FALSE, results='asis',}
+Report_ocearch <- if (is.null(ocearchOutputList$studyData)) {
+  "There are no relevant White Shark records in the OCEARCH Shark Tracker for this search area."
+} else {
+  numRecords <- length(ocearchOutputList$studyData$geometry)
+  distinctIndv <- dplyr::n_distinct(ocearchOutputList$studyData$ID)
+  paste("There are", numRecords, "relevant White Shark records for", distinctIndv, "individuals in OCEARCH Shark Tracker search results for this search area.")
+}
+Report_obis<-noquote(Report_ocearch)
+writeLines(Report_ocearch)
+```
+```{r ocearch-plot, fig.height=8, fig.width=11, fig.cap='Quality Tier: Medium. Security level: none. Map showing the search area defined by the user (red outline) was used to query information from OCEARCH Shark Tracker observation records, for White Shark. Dataset set has not yet been completely error-checked. The absence of a species in this figure should be interpreted as an absence of tracking data, not necessarily as an absence of the species in the area.'}
+if (!is.null(ocearchOutputList$studyData)) {
+  plot_rr_sf(areaMap, ocearchOutputList$mapPoints)
 }
 ```
